Horizontal scrolling fix

--- a/Task1/style.css
+++ b/Task1/style.css
@@ -82,3 +82,7 @@ body::after {
  margin: 1rem auto;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
